kubernetes/apps/kubevirt-cdi/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    cdi.kubevirt.io: ""
    pod-security.kubernetes.io/enforce: "privileged"
  name: cdi
