kubernetes/apps/kubevirt-cdi/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: cdi
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
